# be_BONSAI

./: .gitmodules  README.md
iot_firmware/: .gitignore  CMakeLists.txt  README.md  sdkconfig
iot_firmware/components/analogsensor/: CMakeLists.txt  analogsensor.c
iot_firmware/components/analogsensor/include/: analogsensor.h
iot_firmware/components/awsclient/: CMakeLists.txt  awsclient.c
iot_firmware/components/awsclient/include/: awsclient.h
iot_firmware/components/esp_pahub/: CMakeLists.txt  esp_pahub.c
iot_firmware/components/esp_pahub/include/: esp_pahub.h
iot_firmware/components/esp_pbhub/: CMakeLists.txt  esp_pbhub.c
iot_firmware/components/esp_pbhub/include/: esp_pbhub.h
iot_firmware/components/m5stickc_plus/: CMakeLists.txt  Kconfig  stickcplus.c
iot_firmware/components/m5stickc_plus/include/: stickcplus.h
iot_firmware/components/sht30/: CMakeLists.txt  sht30.c
iot_firmware/components/sht30/include/: sht30.h
iot_firmware/components/sht30/test/: CMakeLists.txt  sht30_test.c
iot_firmware/components/soilsensor/: CMakeLists.txt  soilsensor.c
iot_firmware/components/soilsensor/include/: soilsensor.h
iot_firmware/components/wificlient/: CMakeLists.txt  wificlient.c
iot_firmware/components/wificlient/include/: wificlient.h
iot_firmware/components/wificlient/test/: CMakeLists.txt  Kconfig  wificlient_test.c
iot_firmware/main/: CMakeLists.txt  Kconfig  app_sensors.c  app_sensors.h  app_sleep.c  app_sleep.h  main.c  main.h
iot_firmware/test/: CMakeLists.txt
iot_firmware/test/main/: CMakeLists.txt  main_test.c
